--- a/import/java-xmltooling/branches/REL_1_0/RELEASE-NOTES.txt
+++ b/import/java-xmltooling/branches/REL_1_0/RELEASE-NOTES.txt
@@ -1,4 +1,4 @@
-XMLTooling-J version 1.0.0
+XMLTooling-J 1.0.0
 ==============================================
 
 XMLTooling-J is a low-level library that may be used to construct libraries 
