--- a/import/java-openws/trunk/RELEASE-NOTES.txt
+++ b/import/java-openws/trunk/RELEASE-NOTES.txt
@@ -1,4 +1,4 @@
-OpenWS-J version 1.0 - Trunk
+OpenWS-J Trunk
 =============================================
 
 The OpenWS library provides a growing set of tools to work with web services at 
