--- a/import/java-openws/branches/REL_1/doc/RELEASE-NOTES.txt
+++ b/import/java-openws/branches/REL_1/doc/RELEASE-NOTES.txt
@@ -1,3 +1,8 @@
+Changes in Release 1.2.1
+==============================================
+[JOWS-14] Cleanup StorageService related classes
+* Update logging libraries to grab some bug fixes
+
 Changes in Release 1.2.0
 =============================================
 [JOWS-8] - Allow a filter to be attached to a Resource
