--- a/import/java-openws/branches/REL_1/doc/RELEASE-NOTES.txt
+++ b/import/java-openws/branches/REL_1/doc/RELEASE-NOTES.txt
@@ -1,6 +1,7 @@
 Changes in Release 1.3.0
 ==============================================
 [JOWS-6] - Implement SOAP client
+[JOWS-16] -  Update libs for 1.3.0 release
 
 Changes in Release 1.2.2
 ==============================================
