--- a/import/java-openws/branches/REL_1/doc/RELEASE-NOTES.txt
+++ b/import/java-openws/branches/REL_1/doc/RELEASE-NOTES.txt
@@ -1,7 +1,12 @@
+Changes in Release 1.3.1
+==============================================
+[JOWS-17] - PropertyReplacementResourceFilter - avoid ClassCast exception due to empty properties file 
+
 Changes in Release 1.3.0
 ==============================================
 [JOWS-6] - Implement SOAP client
 [JOWS-16] -  Update libs for 1.3.0 release
+
 
 * New object provider support for WS-Security specification
 * New object provider support for WS-Addressing specification
