--- a/import/java-openws/branches/REL_1/doc/RELEASE-NOTES.txt
+++ b/import/java-openws/branches/REL_1/doc/RELEASE-NOTES.txt
@@ -1,8 +1,9 @@
 Changes in Release 1.4.0
 ==============================================
 [JOWS-15] - AbstractDateTimeType does not handle all datetime formats
-* New object provider support for WS-Trust 1.3 specification
-* New object provider support for WS-Policy specification
+[JOWS-20] - Update 3rd party libs for 1.4.0 release
+          - New object provider support for WS-Trust 1.3 specification
+          - New object provider support for WS-Policy specification
 
 Changes in Release 1.3.1
 ==============================================
